--- a/stylesheet.css
+++ b/stylesheet.css
@@ -36,7 +36,7 @@ a {
 
 .top-wrapper {
   padding: 180px 0 100px 0;
-  background-image: url("");
+  background-image: url("https://images.app.goo.gl/hYcCV4YjCgKtJg4m7");
   background-size: cover;
   color: white;
   text-align: center;
